# war-robot

./: .gitignore  CMakeLists.txt  README.md
include/: card.h  deck.h  game_engine.h  player.h
src/: deck.cpp  game_engine.cpp  main.cpp  player.cpp
